# libparsepol

./: .gitignore  CMakeLists.txt  pol.abnf  pol.ebnf
.github/workflows/: valgrind.yml
inc/: binary.h  binary.hpp  common.h  common.hpp  encoding.h  encoding.hpp  parser.h  parser.hpp
src/: binary.cpp  parser.cpp
test/: binary.h  binary.hpp  endian.h  endian.hpp  generatecase.h  generatecase.hpp  main.cpp  testcases.h  testcases.hpp
